@@ -8,6 +8,7 @@
 	- By default view_all_alarms acl added to Everyone group
 - New NXSL functions: mktime, GetSyslogRuleCheckCount, GetSyslogRuleMatchCount
 - New NXSL "Node" class attributes: isInMaintenanceMode, lastAgentCommTime
+- Operator "new" in NXSL which can be used to instantiate objects if object class supports it
 - SMS driver for Nexmo service
 - SMS driver for SMSEagle gateway
 - Fixed FDB handling on Cisco switches
